# Zero2Hero

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
MMSearch/: README.md
Qwen3-SmVL/: README.md  cocoqa_train.yaml  train.py  utils.py
minimind/: README.md  eval_model.py  train_distill_reason.py  train_distillation.py  train_dpo.py  train_full_sft.py  train_lora.py  train_pretrain.py
minimind-v/: README.md  dataset.py  train_pretrain.py
minimind-v/model/: LMConfig.py  VLMConfig.py  dataset.py  model.py  model_vlm.py
minimind/model/: LMConfig.py  dataset.py  model.py  model_lora.py
minimind/scripts/: full_sft.sh  full_sft_moe.sh  pretrain.sh  pretrain_moe.sh  train_tokenizer.py
tiny-universe/: README.md
tiny-universe/TinyLLM/: README.md  run.sh
tiny-universe/TinyLLM/src/: model.py  modelv2.py  preprocess.py  sample.py  tokenizer.py  train.py  train_vocab.py
