[project]
name = "zero2hero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.4.1",
    "datasketch>=1.6.5",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "gradio>=5.22.0",
    "jieba>=0.42.1",
    "jinja2>=3.1.6",
    "jsonlines>=4.0.0",
    "marshmallow>=3.26.1",
    "matplotlib>=3.10.1",
    "ngrok>=1.4.0",
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "openai>=1.66.5",
    "pandas>=2.2.3",
    "peft>=0.14.0",
    "pre-commit>=4.2.0",
    "psutil>=7.0.0",
    "pydantic>=2.10.6",
    "rich>=13.9.4",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=3.4.1",
    "simhash>=2.1.2",
    "streamlit>=1.43.2",
    "tiktoken>=0.9.0",
    "torch==2.4.1",
    "torchvision>=0.19.1",
    "transformers>=4.49.0",
    "trl>=0.15.2",
    "ujson>=5.10.0",
    "wandb>=0.19.8",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
